policies/tests/require-tags/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-tags
policies:
- ../../require-tags.yaml
resources:
- resources.yaml
results:
- isValidatingPolicy: true
  policy: require-tags
  kind: Database
  resources:
  - good-db
  result: pass
- isValidatingPolicy: true
  policy: require-tags
  kind: Database
  resources:
  - bad-ns
  - bad-no-owner
  - bad-no-cost
  result: fail
